--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#druid = {path = "../druid/druid/", features=["im"]}
-druid = {git = "https://github.com/linebender/druid", features=["im"] }
+druid = {path = "../druid/druid/", features=["im"]}
+#druid = {git = "https://github.com/linebender/druid", features=["im"] }
 im = { version = "15.0.0"}
+log = "0.4.8"
